# zackon_build_up

./: .gitignore  README.md  config.py  get_intensities_of_lidar.py
robot_ui/: docking_sequence.py  load_map_dialog.py  manual_mode_layout.py  new_map_layout.py  odom_tf_publisher.py  startup_layout.py  tracking_mode_layout.py  waypoints.json  waypoints_mode_layout.py
src/auto_docking/: README.md  package.xml  setup.py
src/auto_docking/auto_docking/: dock_controller_node.py  dock_detector_node.py  dock_robot.py
src/auto_docking/config/: dock_database.yaml  docking_server.yaml
src/auto_docking/launch/: auto_docking.launch.py
src/human_following/: README.md  package.xml  setup.py
src/human_following/human_following/: camera.py  controller.py  detector.py  human_following_node.py  pid_controller.py  tracker.py
src/human_following/launch/: human_following.launch.py  system.launch.py
src/joy_teleop/: setup.py
src/joy_teleop/launch/: joystick_zackon.launch.py
src/joy_teleop/my_joy_teleop/: teleop_node.py
src/lidar_dock_detector/: CMakeLists.txt  package.xml  plugins.xml
src/lidar_dock_detector/config/: docking_params.yaml
src/lidar_dock_detector/include/lidar_dock_detector/:    lidar_intensity_dock.hpp   docking_node.hpp  lidar_intensity_dock.hpp
src/lidar_dock_detector/launch/: docking.launch.py
src/lidar_dock_detector/src/: debug_intensity_node.cpp  docking_node.cpp  lidar_intensity_dock.cpp
src/sllidar_ros2/launch/: sllidar_s2_launch.py  view_sllidar_s2_launch.py
src/sllidar_ros2/sdk/include/: sl_lidar_cmd.h  sl_lidar_protocol.h
src/sllidar_ros2/sdk/src/: sl_lidar_driver.cpp
src/view_robot/: setup.py
src/view_robot/config/: ekf.yaml  lidar_filter.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src/view_robot/launch/: MAP_GENERATING.launch.py  lidar_filter.launch.py  zackon_localization.launch.py  zackon_navigation.launch.py  zackon_synthesis.launch.py
src/view_robot/maps/: AUN_MAP.pgm  AUN_MAP.yaml  BO_MON_TU_DONG.pgm  BO_MON_TU_DONG.yaml  F5.pgm  F5.yaml  MISS_TAM_MAP.pgm  MISS_TAM_MAP.yaml  V6.pgm  V6.yaml  X504.pgm  X504.yaml  X5_11.pgm  X5_11.yaml  X5_12.pgm  X5_12.yaml  X5_13.pgm  X5_13.yaml  X5_19032026.pgm  X5_19032026.yaml  khoi_sofa_map3.pgm  khoi_sofa_map3.yaml  khoi_sofa_map4.pgm  khoi_sofa_map4.yaml  mapv10p1.pgm  mapv10p1.yaml  tangtret_update.pgm  tangtret_update.yaml
src/view_robot/meshes/: leftwheel_Link.STL  right_casterwheel_after_Link.STL  rightwheel_Link.STL
src/view_robot/rviz/: default_view.rviz
src/view_robot/urdf/: robot_description.urdf
src/view_robot/view_robot_pkg/: odom_tf_broadcaster.py
tool/: debug_lidar_internal_computation.py  debug_raw_scan.py  get_intensities_of_lidar.py
